# django-analog

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  manage.py  requirements-dev.txt  requirements-stylecheck.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
analog/: __init__.py  define.py  exceptions.py  models.py  settings.py  util.py
analog_tests/: __main__.py  models.py  settings.py  test_analog.py  test_util.py
docs/: api.rst  conf.py  config.rst  index.rst
