[metadata]
name = django-analog
version = 1.0.0.post+gitver
description = Simple per-model log models for Django apps
long_description = file: README.rst
keywords = django, logging
url = https://github.com/andersinno/django-analog
author = Anders Innovations
author_email = support@anders.fi
license = MIT
license_file = LICENSE
platforms = any

[options]
include_package_data = True
packages = find:
install_requires =
    Django

[options.packages.find]
exclude = analog_tests, analog_tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,dist,venv,docs
max-line-length = 79
max-complexity = 10

[pep257]
ignore = D100,D203

[tool:pytest]
DJANGO_SETTINGS_MODULE = analog_tests.settings
norecursedirs = .git venv*

[isort]
multi_line_output = 4
skip=.tox,dist,venv,docs
not_skip = __init__.py
known_first_party=analog
known_third_party=django,pytest

[prequ]
requirements-stylecheck =
    flake8
    flake8-isort
    flake8-print
    pep257
    pep8-naming

requirements-test =
    pytest>=3.0.0
    pytest-cov
    pytest-django>=3.0.0
    pytest-sugar
